# Candy-Project

./: .gitignore  CMakeLists.txt  README.md
Components/: CMakeLists.txt
Components/Core/: CMakeLists.txt  Core.cpp  Core.h
Components/Core/Cache/: Cache.cpp  Cache.h
Components/Core/Daemon/: Daemon.cpp  Daemon.h
Components/View/: CMakeLists.txt  View.cpp  View.h
Launcher/: CMakeLists.txt  main.cpp
Share/: CMakeLists.txt  Share.cpp  Share.h
Share/api/: ICandyComponent.h
